added the color coding to the letters

--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
             <h2>Type 15 Words as Fast as Possible</h2>
         </header>
         <main>
-            <div id="Words"></div>
+            <div id="Words">
+                <p id="toType"></p>
+            </div>
         </main>
     </div>
-
-
-
-    <script src="./js/server.js"></script>
+    <script src="./js/client.js"></script>
 </body>
 
 </html>
